# module-mysql

./: .gitignore  .gitlab-ci.yml  .jenkins.prop  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-mysql-module.spec  reconf.sh
cmake/: FindMySQL.cmake  config.h.cmake
docs/: doxyfile.tmpl  mainpage.dox.tmpl  mysql-module-doc.html
docs/old/: mysql-module-doc.html
src/: Makefile.am  mysql.cc  mysql.cpp  qore-mysql-module.h  qore-mysql.h
test/: db-test.q  mysql.qtest  sql-stmt.q
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
